# gc-representation-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  config.toml
paper/: .gitignore  .latexmkrc  README.md  body.tex  citations.bib  index.tex
program/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
program/benches/: benchmark.rs
program/src/: lib.rs  main.rs  mark_compact.rs  shared.rs  stop_copy.rs
program/src/tests/: actual.rs  collection.rs  metric.rs  mod.rs  sanity.rs
src/: graph.rs  lib.rs  main.rs  mark_compact.rs  shared.rs  stop_copy.rs  tests.rs
src/tests/: actual.rs  mod.rs  sanity.rs
