[package]
name = "gc-representation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gc"
path = "src/lib.rs"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
rand_pcg = "0.3.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false